--- a/css/layout.css
+++ b/css/layout.css
@@ -8,7 +8,8 @@
   padding: 0 1.5rem;
 }
 
-.row {
+.row,
+.dash {
   display: flex;
   flex-wrap: wrap;
 }
@@ -29,7 +30,7 @@
   }
 
   .column-fourth {
-    width: 22%;
+    width: 23.4%;
   }
 
   .margin-left {
