--- a/css/layout.css
+++ b/css/layout.css
@@ -8,8 +8,7 @@
   padding: 0 1.5rem;
 }
 
-.row,
-.dash {
+.row {
   display: flex;
   flex-wrap: wrap;
 }
@@ -30,7 +29,7 @@
   }
 
   .column-fourth {
-    width: 23.4%;
+    width: 25%;
   }
 
   .margin-left {
