--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ input {
   border: none;
   cursor: pointer;
   font-size: 1rem;
-  margin-bottom: 0.75rem;
+  margin-bottom: 0.25rem;
 }
 
 .add-to-watchlist:hover {
@@ -136,13 +136,10 @@ input {
   width: 25px;
 }
 
-.data-name {
-  line-height: 20%;
-}
-
 .data-symbol {
   color: #757575;
   line-height: 50%;
+  margin-top: 0.5rem;
 }
 
 .data-priceUsd {
@@ -196,8 +193,8 @@ input {
   border-radius: 4px;
   border: none;
   font-size: 1.1rem;
-  margin-bottom: 0.75rem;
   cursor: pointer;
+  margin-bottom: 0.25rem;
 }
 
 .remove-from-watchlist:hover {
@@ -213,6 +210,37 @@ input {
 }
 
 .dash {
-  padding: 0;
-  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.asset-icon {
+  width: 36px;
+  height: 36px;
+  vertical-align: middle;
+}
+
+.name-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  line-height: 10%;
+}
+
+.dashboard-card {
+  align-items: center;
+  width: 12.5rem;
+  height: 19rem;
+  background-color: white;
+  border-radius: 8px;
+  text-align: center;
+  border: 1px solid #d8e2f5;
+  padding: 1rem 0;
+  margin-left: 0;
+  margin-right: 0;
 }
